app/assets/stylesheets/components/_progress.scss
.container-progress {
  height: 100px;
  width: 100px;
  padding-top: 10px;
}
.circular-progress {
  position: relative;
  height: 100px;
  width: 100px;
  border-radius: 50%;
  display: grid;
  place-items: center;
  background-color: #f2777790;
}
.circular-progress:before {
  content: "";
  position: absolute;
  height: 84%;
  width: 84%;
  background-color: $green-blue;
  border-radius: 50%;
}
.value-container {
  position: relative;
  font-family: "Poppins", sans-serif;
  text-decoration: none;
  font-size: 24px;
  color: $white;
}

